--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <input type="submit" value="Search" />
           <input type="submit" value="Current Location" />
         </form>
-        <div>Monday 12 October, 2023 12:25</div>
+        <div id="currentDate"></div>
         <div class="current-weather-section">
           <div class="row">
             <div class="col-8 text-center">
