--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
               </ul>
             </div>
             <div class="col-4 text-center">
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              />
+              <img src="" alt="Icon" id="current-icon" />
               <div>
                 <span
                   class="current-temperature"
