conversion Celcius - Fahrenheit

--- a/index.html
+++ b/index.html
@@ -58,11 +58,19 @@
             <div class="col-4 text-center">
               <img src="" alt="Icon" id="current-icon" />
               <div>
-                <span
+                <strong
                   class="current-temperature"
                   id="current-temperature"
-                ></span>
-                <span class="current-temperature">°C</span>
+                ></strong>
+                <span class="units"
+                  ><a href="#" class="celcius" id="celcius-link" class="active"
+                    >°C</a
+                  >
+                  |
+                  <a href="#" class="fahrenheit" id="fahrenheit-link"
+                    >°F</a
+                  ></span
+                >
               </div>
               <div class="description" id="description"></div>
               <div class="low-high">
