Added HTML + CSS for weather forecast

--- a/index.html
+++ b/index.html
@@ -78,41 +78,15 @@
         </div>
         <div class="weather-forecast-section">
           <div class="row">
-            <div class="col text-center">
-              <div>Mon</div>
+            <div class="col-2 text-center">
+              <div class="weather-forecast-date">Mon</div>
               <img
                 src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              />2°
-            </div>
-            <div class="col text-center">
-              <div>Tue</div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              />4°
-            </div>
-            <div class="col text-center">
-              <div>Wed</div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              />8°
-            </div>
-            <div class="col text-center">
-              <div>Thu</div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              />11°
-            </div>
-            <div class="col text-center">
-              <div>Fri</div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              />9°
-            </div>
-            <div class="col text-center">
-              <div>Sat</div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              />6°
+              />
+              <div class="weather-forecast-temperature">
+                <span class="weather-forecast-temperature-min">2°</span
+                ><span class="weather-forecast-temperature-max"> 18°</span>
+              </div>
             </div>
           </div>
         </div>
