JS template for forecast

--- a/index.html
+++ b/index.html
@@ -76,20 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="weather-forecast-section">
-          <div class="row">
-            <div class="col-2 text-center">
-              <div class="weather-forecast-date">Mon</div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-forecast-temperature-min">2°</span
-                ><span class="weather-forecast-temperature-max"> 18°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast-section" id="forecast"></div>
         <footer>
           <a
             href="https://github.com/avdelsen/Annabelle-Vanilla-Weather-App"
