--- a/index.html
+++ b/index.html
@@ -62,15 +62,7 @@
                   class="current-temperature"
                   id="current-temperature"
                 ></strong>
-                <span class="units"
-                  ><a href="#" class="celcius" id="celcius-link" class="active"
-                    >°C</a
-                  >
-                  |
-                  <a href="#" class="fahrenheit" id="fahrenheit-link"
-                    >°F</a
-                  ></span
-                >
+                <span href="#" class="celcius">°C </span>
               </div>
               <div class="description" id="description"></div>
             </div>
