Changed gradient background

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   class="current-temperature"
                   id="current-temperature"
                 ></strong>
-                <span href="#" class="celcius">°C </span>
+                <span href="#" class="celcius"><sup>°C</sup></span>
               </div>
               <div class="description" id="description"></div>
             </div>
